--- a/harness/cd/jmeta/k8s-rolling-pipeline.yaml
+++ b/harness/cd/jmeta/k8s-rolling-pipeline.yaml
@@ -153,7 +153,7 @@ pipeline:
                               mkdir -p "$(dirname "$SOURCE_CODE_PATH")"
 
                               # Perform clone
-                              git_operation git clone git@github.com:vjcspy/meta.git -b "$GIT_BRANCH" "$SOURCE_CODE_PATH"
+                              git_operation git clone git@github.com:vjcspy/JMeta.git -b "$GIT_BRANCH" "$SOURCE_CODE_PATH"
                             fi
 
                             log "Git operations completed successfully"
