Update pipeline jmeta-deployment

--- a/harness/cd/jmeta/k8s-rolling-pipeline.yaml
+++ b/harness/cd/jmeta/k8s-rolling-pipeline.yaml
@@ -266,3 +266,8 @@ pipeline:
       description: Số lượng api request instance
       required: true
       value: <+input>.default(1)
+  timeout: 45m
+  allowStageExecutions: true
+  fixedInputsOnRerun: true
+  delegateSelectors:
+    - helm-delegate
