feat: add TLS secret, update ingress configuration, and enhance deployment with init containers and resource limits

--- a/k8s/app/meta/templates/deployment.yaml
+++ b/k8s/app/meta/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
       initContainers:
         # First time after restart cluster always fail
         - name: init-container-check-host-mounted-ebs-volume
-          image: busybox
+          image: busybox:1.37.0
           command: [ 'sh', '-c', 'for i in $(seq 1 5); do echo "Checking attempt $i..."; if [ -f /host_ebs_volume/DONT_DELETE ]; then echo "File found, exiting successfully."; exit 0; fi; echo "File not found, retrying..."; sleep 10; done; echo "File not found after 5 attempts, exiting with error."; exit 1' ]
           volumeMounts:
             - name: host-volume
