--- a/k8s/app/jmeta/templates/deployment.yaml
+++ b/k8s/app/jmeta/templates/deployment.yaml
@@ -4,6 +4,9 @@ metadata:
   name: {{ include "jmeta.fullname" . }}
   labels:
     {{- include "jmeta.labels" . | nindent 4 }}
+  # redeploy pod every time the pipeline runs
+  annotations:
+    redeployTimestamp: "{{ now | unixEpoch }}"
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
@@ -32,6 +35,15 @@ spec:
       securityContext:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+
+      initContainers:
+        - name: init-container-check-host-mounted-ebs-volume
+          image: busybox:1.37.0
+          command: [ 'sh', '-c', 'for i in $(seq 1 5); do echo "Checking attempt $i..."; if [ -f /host_ebs_volume/DONT_DELETE ]; then echo "File found, exiting successfully."; exit 0; fi; echo "File not found, retrying..."; sleep 10; done; echo "File not found after 5 attempts, exiting with error."; exit 1' ]
+          volumeMounts:
+            - name: host-volume
+              mountPath: /host_ebs_volume
+
       containers:
         - name: {{ .Chart.Name }}
           {{- with .Values.securityContext }}
