--- a/k8s/app/jmeta/values.yaml
+++ b/k8s/app/jmeta/values.yaml
@@ -89,13 +89,13 @@ ingress:
     nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
     nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
   hosts:
-    - host: <+pipeline.variables.project_name>.dinhkhoile.com
+    - host: j<+pipeline.variables.project_name>.dinhkhoile.com
       paths:
         - path: /
           pathType: Prefix
   tls:
     - hosts:
-        - <+pipeline.variables.project_name>.dinhkhoile.com
+        - j<+pipeline.variables.project_name>.dinhkhoile.com
 
 resources:
   limits:
