--- a/k8s/app/jmeta/templates/deployment.yaml
+++ b/k8s/app/jmeta/templates/deployment.yaml
@@ -37,9 +37,22 @@ spec:
       {{- end }}
 
       initContainers:
-        - name: init-container-check-host-mounted-ebs-volume
+        - name: init-copy-config
           image: busybox:1.37.0
-          command: [ 'sh', '-c', 'for i in $(seq 1 5); do echo "Checking attempt $i..."; if [ -f /host_ebs_volume/DONT_DELETE ]; then echo "File found, exiting successfully."; exit 0; fi; echo "File not found, retrying..."; sleep 10; done; echo "File not found after 5 attempts, exiting with error."; exit 1' ]
+          command:
+            - sh
+            - -c
+            - |
+              echo "[Init] Checking for config file..."
+              CONFIG_SRC="/host_ebs_volume/credentials/jmeta/{{ .Values.projectName }}/application.properties"
+              CONFIG_DEST="/host_ebs_volume/jmeta/{{ .Values.projectName }}/projects/{{ .Values.projectName }}/build/quarkus-app/config/application.properties"
+              if [ -f "$CONFIG_SRC" ]; then
+                echo "[Init] Config found, copying..."
+                mkdir -p "$(dirname "$CONFIG_DEST")"
+                cp "$CONFIG_SRC" "$CONFIG_DEST"
+              else
+                echo "[Init] Config file not found, skipping."
+              fi
           volumeMounts:
             - name: host-volume
               mountPath: /host_ebs_volume
