--- a/k8s/app/jmeta/values.yaml
+++ b/k8s/app/jmeta/values.yaml
@@ -6,6 +6,7 @@
 replicaCount: <+pipeline.variables.num_of_instance>
 
 namespace: <+pipeline.stages.Configuration.spec.execution.steps.Resolve_Configuration.output.outputVariables.namespace>
+projectName: <+pipeline.variables.project_name>
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
