--- a/k8s/app/meta/values.yaml
+++ b/k8s/app/meta/values.yaml
@@ -112,10 +112,16 @@ livenessProbe:
   httpGet:
     path: /
     port: 3000
+  initialDelaySeconds: 20
+  periodSeconds: 10
+  failureThreshold: 3
 readinessProbe:
   httpGet:
     path: /
     port: 3000
+  initialDelaySeconds: 10
+  periodSeconds: 5
+  failureThreshold: 3
 
 #This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
