chore: add app.kubernetes.io/component label to Deployment selector and metadata in jmeta

--- a/k8s/app/jmeta/templates/deployment.yaml
+++ b/k8s/app/jmeta/templates/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ include "jmeta.fullname" . }}
   labels:
     {{- include "jmeta.labels" . | nindent 4 }}
-  # redeploy pod every time the pipeline runs
+    app.kubernetes.io/component: api
   annotations:
     redeployTimestamp: "{{ now | unixEpoch }}"
 spec:
@@ -14,6 +14,7 @@ spec:
   selector:
     matchLabels:
       {{- include "jmeta.selectorLabels" . | nindent 6 }}
+      app.kubernetes.io/component: api
   template:
     metadata:
       {{- with .Values.podAnnotations }}
