chore: set readOnlyRootFilesystem to false in jmeta/values.yaml

--- a/k8s/app/jmeta/values.yaml
+++ b/k8s/app/jmeta/values.yaml
@@ -49,7 +49,7 @@ securityContext:
   capabilities:
     drop:
       - ALL
-  readOnlyRootFilesystem: true
+  readOnlyRootFilesystem: false
   runAsNonRoot: true
   runAsUser: 185
 
