--- a/misc/docker/quarkus-jvm-21/Dockerfile
+++ b/misc/docker/quarkus-jvm-21/Dockerfile
@@ -7,4 +7,6 @@ USER 185
 ENV JAVA_OPTS_APPEND="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
 ENV JAVA_APP_JAR="/deployments/quarkus-run.jar"
 
+RUN mkdir -p /tmp/logs && touch /tmp/logs/app.log
+
 ENTRYPOINT [ "/opt/jboss/container/java/run/run-java.sh" ]
