--- a/k8s/app/fluent-bit/fluent-bit-values.yaml
+++ b/k8s/app/fluent-bit/fluent-bit-values.yaml
@@ -400,10 +400,11 @@ config:
     [INPUT]
         Name             tail
         # Đường dẫn chuẩn cho log container trên Kubernetes (bao gồm K3s)
-        Path             /var/log/containers/*.log
+        # Format: <pod_name>_<container_name>-<container_id>.log
+        Path             /var/log/containers/*_jmeta-stock_jmeta*.log
         # Parser 'docker' sẽ trích xuất trường 'log' chứa JSON của bạn
         Parser           docker
-        Tag              kube.*
+        Tag              kube.jmeta-stock.*
         Mem_Buf_Limit    10MB # Tăng buffer size nếu có lượng log lớn
         Skip_Long_Lines  On
         DB               /var/log/flb_kube.db # Persistent cursor để tránh đọc lại log cũ khi restart
@@ -419,7 +420,7 @@ config:
   filters: |
     [FILTER]
         Name             kubernetes
-        Match            kube.*
+        Match            kube.jmeta-stock.*
         # Merge_Log On là rất quan trọng để Fluent Bit cố gắng parse trường 'log' (chứa JSON của ứng dụng)
         # và đưa các trường con của JSON vào cấp độ gốc của bản ghi.
         Merge_Log        On
@@ -436,23 +437,28 @@ config:
     # Tuy nhiên, nếu Merge_Log On hoạt động tốt, bạn có thể không cần filter này.
     [FILTER]
         Name   parser
-        Match  kube.*
+        Match  kube.jmeta-stock.*
         Key_Name log # Áp dụng parser cho trường 'log' đã được trích xuất bởi parser 'docker'
         Parser my_app_json # Sử dụng parser JSON tùy chỉnh mà chúng ta sẽ định nghĩa
         Preserve_Key Off # Xóa trường 'log' gốc sau khi parse
         Hash_For_JSON_Overlapping_Keys On # Xử lý trường hợp trùng tên key sau khi parse JSON
 
   outputs: |
+    [OUTPUT]
+    Name   stdout
+    Match kube.jmeta-stock.*
+    Format json_lines # In ra JSON mỗi dòng
+    
     # Output cho Splunk HEC
     [OUTPUT]
         Name           splunk
-        Match          kube.*
-        Host           your-splunk-hec-host.example.com # THAY THẾ BẰNG HOST THẬT CỦA BẠN
+        Match          kube.jmeta-stock.*
+        Host           splunk-server.splunk-server.svc.cluster.local # THAY THẾ BẰNG HOST THẬT CỦA BẠN
         Port           8088
         URI            /services/collector
         # Sử dụng biến môi trường lấy từ Secret
-        Header         Authorization Bearer ${SPLUNK_HEC_TOKEN}
-        TLS            On
+        Header         Authorization Bearer 91f4652d-abeb-450b-a9f3-ba3c3c693bfd
+        TLS            Off
         # Cực kỳ quan trọng: Trong production, bạn cần có chứng chỉ CA và đặt TLS.Verify On
         # TLS.CA_File    /fluent-bit/etc/splunk-ca.crt # Nếu cần custom CA
         TLS.Verify     Off # CHỈ DÙNG CHO DEV/TEST. Trong PROD, phải là On và cấu hình chứng chỉ.
@@ -467,24 +473,24 @@ config:
         # Disk_Mem_Buf_Limit 50MB # Giới hạn bộ nhớ đệm trên đĩa cho output này
 
     # Output cho OpenSearch
-    [OUTPUT]
-        Name           opensearch
-        Match          kube.*
-        Host           your-opensearch-host.example.com # THAY THẾ BẰNG HOST THẬT CỦA BẠN
-        Port           9200
-        # Index động theo namespace và ngày để quản lý dễ dàng
-        Index          kubernetes-logs-${kubernetes['namespace_name']}-${DATE}
-        Type           _doc # Cho OpenSearch 1.x / Elasticsearch 7.x+
-        TLS            On
-        TLS.Verify     Off # CHỈ DÙNG CHO DEV/TEST. Trong PROD, phải là On và cấu hình chứng chỉ.
-        # Xác thực bằng user/pass lấy từ biến môi trường
-        HTTP_User      ${OPENSEARCH_USER}
-        HTTP_Passwd    ${OPENSEARCH_PASSWORD}
-        # Nén dữ liệu trước khi gửi để tiết kiệm băng thông
-        Gzip           On
-        # Cấu hình retry
-        Retry_Limit    False
-        # Disk_Mem_Buf_Limit 50MB # Giới hạn bộ nhớ đệm trên đĩa cho output này
+  #      [OUTPUT]
+  #          Name           opensearch
+  #          Match          kube.*
+  #          Host           your-opensearch-host.example.com # THAY THẾ BẰNG HOST THẬT CỦA BẠN
+  #          Port           9200
+  #          # Index động theo namespace và ngày để quản lý dễ dàng
+  #          Index          kubernetes-logs-${kubernetes['namespace_name']}-${DATE}
+  #          Type           _doc # Cho OpenSearch 1.x / Elasticsearch 7.x+
+  #          TLS            On
+  #          TLS.Verify     Off # CHỈ DÙNG CHO DEV/TEST. Trong PROD, phải là On và cấu hình chứng chỉ.
+  #          # Xác thực bằng user/pass lấy từ biến môi trường
+  #          HTTP_User      ${OPENSEARCH_USER}
+  #          HTTP_Passwd    ${OPENSEARCH_PASSWORD}
+  #          # Nén dữ liệu trước khi gửi để tiết kiệm băng thông
+  #          Gzip           On
+  #          # Cấu hình retry
+  #          Retry_Limit    False
+  #          # Disk_Mem_Buf_Limit 50MB # Giới hạn bộ nhớ đệm trên đĩa cho output này
 
   ## https://docs.fluentbit.io/manual/administration/configuring-fluent-bit/classic-mode/upstream-servers
   ## This configuration is deprecated, please use `extraFiles` instead.
