--- a/k8s/app/fluent-bit/fluent-bit-values.yaml
+++ b/k8s/app/fluent-bit/fluent-bit-values.yaml
@@ -248,7 +248,7 @@ config:
         TLS Off
         TLS.Verify Off
         Retry_Limit False
-        splunk_send_raw on
+        splunk_send_raw off
 
   upstream: {}
 
