Update default `project_name` variable in k8s-rolling-pipeline to `http` and adjust allowed values.

--- a/harness/cd/jmeta/k8s-rolling-pipeline.yaml
+++ b/harness/cd/jmeta/k8s-rolling-pipeline.yaml
@@ -303,10 +303,10 @@ pipeline:
   variables:
     - name: project_name
       type: String
-      default: stock
+      default: http
       description: Phải có branch projects/NAME
       required: true
-      value: <+input>.default(stock).allowedValues(stock,binance)
+      value: <+input>.default(stock).allowedValues(stock,http)
     - name: num_of_instance
       type: Number
       description: Số lượng api request instance
