feat: update Helm chart and k8s pipeline for dynamic values and enhanced volume configuration
- Updated `appVersion` in Chart.yaml to use dynamic base image.
- Included new `num_of_instance` pipeline variable in values.yaml for replica scaling.
- Added host volume and volume mounts for EBS integration in deployment.yaml.
- Introduced init container for host

--- a/harness/cd/metan/k8s-rolling-pipeline.yaml
+++ b/harness/cd/metan/k8s-rolling-pipeline.yaml
@@ -273,7 +273,7 @@ pipeline:
       value: <+input>.default(cli).allowedValues(cli)
     - name: num_of_instance
       type: Number
-      description: Số lượng api request instance
+      description: Số lượng instance
       required: true
       value: <+input>.default(1)
   timeout: 60m
