--- a/k8s/app/metan/templates/service.yaml
+++ b/k8s/app/metan/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if false -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -13,3 +14,4 @@ spec:
       name: http
   selector:
     {{- include "metan.selectorLabels" . | nindent 4 }}
+{{- end }}
