--- a/k8s/app/metan/values.yaml
+++ b/k8s/app/metan/values.yaml
@@ -5,6 +5,9 @@
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: <+pipeline.variables.num_of_instance>
 
+namespace: <+pipeline.stages.Configuration.spec.execution.steps.Resolve_Configuration.output.outputVariables.namespace>
+projectName: <+pipeline.variables.project_name>
+
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
   repository: ghcr.io/astral-sh/uv
