--- a/k8s/app/metan/templates/deployment.yaml
+++ b/k8s/app/metan/templates/deployment.yaml
@@ -51,7 +51,7 @@ spec:
           {{- end }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: ["uv", "run", "metan", "worker", "start"]
+          command: [ "tail", "-f", "/dev/null" ]
           env:
             - name: BUILD_TIME
               value: {{ .Values.podEnv.BUILD_TIME }}
