chore: update `metan` Helm chart with image source and environment path changes
- Changed `appVersion` to "3.12-alpine" in Chart.yaml.
- Updated the container image repository to use `python` instead of `ghcr.io/astral-sh/uv`.
- Modified `PYTHONPATH` to include `/app` in deployment.yaml.

--- a/k8s/app/metan/templates/deployment.yaml
+++ b/k8s/app/metan/templates/deployment.yaml
@@ -56,7 +56,7 @@ spec:
             - name: BUILD_TIME
               value: {{ .Values.podEnv.BUILD_TIME }}
             - name: PYTHONPATH
-              value: /app/deps
+              value: /app/deps:/app
           {{- with .Values.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
