chore: add `ENVIRONMENT` and `APP_NAME` environment variables to `metan` deployment manifest

--- a/k8s/app/metan/templates/deployment.yaml
+++ b/k8s/app/metan/templates/deployment.yaml
@@ -57,6 +57,10 @@ spec:
               value: {{ .Values.podEnv.BUILD_TIME }}
             - name: PYTHONPATH
               value: /app/deps:/app
+            - name: ENVIRONMENT
+              value: prod
+            - name: APP_NAME
+              value: METAN
           {{- with .Values.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
