--- a/k8s/app/metan/templates/deployment.yaml
+++ b/k8s/app/metan/templates/deployment.yaml
@@ -56,7 +56,7 @@ spec:
             - name: BUILD_TIME
               value: {{ .Values.podEnv.BUILD_TIME }}
             - name: PYTHONPATH
-              value: /app/deps:/app
+              value: /app/deps
             - name: ENVIRONMENT
               value: prod
             - name: APP_NAME
